syntax = "proto3";
option csharp_namespace = "VShop.Modules.Billing.Integration.Events";

import "SharedKernel/SharedKernel.Infrastructure/_schemas/uuid.proto";

message PaymentSucceededIntegrationEvent 
{
    Uuid order_id = 1;
}