syntax = "proto3";
option csharp_namespace = "VShop.Modules.Billing.Integration.Events";

import "SharedKernel/SharedKernel.Messaging/_schemas/uuid.proto";

message PaymentFailedIntegrationEvent 
{
    Uuid order_id = 1;
}